--- a/client/styles/components/landingContent.module.css
+++ b/client/styles/components/landingContent.module.css
@@ -14,8 +14,8 @@
 }
 
 #heroContainer {
-  width: 108rem;
-  max-width: 108rem;
+  width: 110rem;
+  max-width: 110rem;
 
   display: flex;
   position: relative;
