--- a/client/styles/components/landingGraphic.module.css
+++ b/client/styles/components/landingGraphic.module.css
@@ -3,7 +3,7 @@
   top: 10%;
   right: 0;
   bottom: 0;
-  left: 10%;
+  left: 12%;
   margin: auto;
 
   height: 1509px;
@@ -56,8 +56,8 @@
 #bubble {
   position: absolute;
   top: 0;
-  right: 35%;
-  bottom: 35%;
+  right: 31%;
+  bottom: 33%;
   left: 0;
   margin: auto;
 
@@ -70,7 +70,7 @@
   top: 15%;
   right: 0;
   bottom: 0;
-  left: 40%;
+  left: 38%;
   margin: auto;
 
   will-change: transform;
@@ -79,8 +79,8 @@
 
 #bell {
   position: absolute;
-  top: 36%;
-  right: 42%;
+  top: 24%;
+  right: 40%;
   bottom: 0;
   left: 0;
   margin: auto;
